--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:21:58.438952Z",
-     "start_time": "2019-08-16T12:21:58.436520Z"
+     "end_time": "2019-08-15T20:24:44.493904Z",
+     "start_time": "2019-08-15T20:24:44.488820Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:22:00.104561Z",
-     "start_time": "2019-08-16T12:21:58.441517Z"
+     "end_time": "2019-08-15T20:24:48.783712Z",
+     "start_time": "2019-08-15T20:24:44.500461Z"
     }
    },
    "outputs": [
@@ -35,7 +35,11 @@
       "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
       "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
       "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
-      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n"
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0815 22:24:48.751556 4649416128 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+      "\n"
      ]
     }
    ],
@@ -46,7 +50,6 @@
     "import pandas as pd\n",
     "import joblib\n",
     "from datetime import datetime\n",
-    "from tqdm import tqdm_notebook\n",
     "\n",
     "import lightgbm as lgb\n",
     "import optuna\n",
@@ -70,16 +73,15 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:22:00.109018Z",
-     "start_time": "2019-08-16T12:22:00.106247Z"
+     "end_time": "2019-08-15T20:24:48.824329Z",
+     "start_time": "2019-08-15T20:24:48.801162Z"
     },
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
     "DATA_PATH = '../input/'\n",
-    "SEARCH_PARAMS = False\n",
-    "n_fold = 8"
+    "SEARCH_PARAMS = True"
    ]
   },
   {
@@ -87,8 +89,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:22.206342Z",
-     "start_time": "2019-08-16T12:22:00.111378Z"
+     "end_time": "2019-08-15T20:26:44.765665Z",
+     "start_time": "2019-08-15T20:24:48.844406Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -162,23 +164,15 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:22.219725Z",
-     "start_time": "2019-08-16T12:23:22.208212Z"
+     "end_time": "2019-08-15T20:26:44.784863Z",
+     "start_time": "2019-08-15T20:26:44.768021Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "float16    325\n",
-       "float64     39\n",
-       "float32     39\n",
-       "int64       26\n",
-       "bool         2\n",
-       "int8         1\n",
-       "int16        1\n",
-       "int32        1\n",
-       "dtype: int64"
+       "(590540, 436)"
       ]
      },
      "execution_count": 5,
@@ -187,7 +181,7 @@
     }
    ],
    "source": [
-    "train.dtypes.value_counts()"
+    "train.shape"
    ]
   },
   {
@@ -195,8 +189,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:31.710174Z",
-     "start_time": "2019-08-16T12:23:22.221909Z"
+     "end_time": "2019-08-15T20:26:59.281946Z",
+     "start_time": "2019-08-15T20:26:44.794031Z"
     }
    },
    "outputs": [],
@@ -218,8 +212,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:38.478584Z",
-     "start_time": "2019-08-16T12:23:31.711848Z"
+     "end_time": "2019-08-15T20:27:06.438784Z",
+     "start_time": "2019-08-15T20:26:59.283524Z"
     }
    },
    "outputs": [
@@ -227,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mem. usage decreased to 561.49 Mb (25.7% reduction)\n"
+      "Mem. usage decreased to 566.00 Mb (26.0% reduction)\n"
      ]
     }
    ],
@@ -247,8 +241,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:38.485910Z",
-     "start_time": "2019-08-16T12:23:38.480852Z"
+     "end_time": "2019-08-15T20:27:06.447988Z",
+     "start_time": "2019-08-15T20:27:06.441381Z"
     }
    },
    "outputs": [],
@@ -259,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:38.492850Z",
-     "start_time": "2019-08-16T12:23:38.489378Z"
+     "end_time": "2019-08-15T20:27:15.338952Z",
+     "start_time": "2019-08-15T20:27:15.335684Z"
     }
    },
    "outputs": [],
@@ -273,11 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:38.502862Z",
-     "start_time": "2019-08-16T12:23:38.495802Z"
+     "end_time": "2019-08-15T20:27:07.486847Z",
+     "start_time": "2019-08-15T20:24:44.522Z"
     }
    },
    "outputs": [],
@@ -304,16 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T12:23:38.512069Z",
-     "start_time": "2019-08-16T12:23:38.505218Z"
+     "end_time": "2019-08-15T20:27:07.488310Z",
+     "start_time": "2019-08-15T20:24:44.526Z"
     }
    },
    "outputs": [],
    "source": [
     "def objective(trial):\n",
+    "    \n",
     "    joblib.dump(study, 'study.pkl')\n",
     "    \n",
     "    X_train_, X_test_, y_train_, y_test_ = train_test_split(X_train, y_train, stratify=y_train)\n",
@@ -327,8 +322,7 @@
     "        'verbosity': -1,\n",
     "        'num_leaves': trial.suggest_int('num_leaves', 10, 500),\n",
     "        'max_depth': trial.suggest_int('max_depth', 10, 300), \n",
-    "#         'n_estimators': trial.suggest_int('n_estimators', 50, 2000), \n",
-    "        'n_estimators': 1200,\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 50, 2000), \n",
     "        'subsample_for_bin': trial.suggest_int('subsample_for_bin', 1000, 500000), \n",
     "        'min_child_samples': trial.suggest_int('min_child_samples', 2, 200), \n",
     "        'reg_alpha': trial.suggest_loguniform('reg_alpha', 0.00001, 10.0),\n",
@@ -352,17 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-16T13:55:51.355165Z",
-     "start_time": "2019-08-16T13:55:51.344515Z"
+     "end_time": "2019-08-15T20:27:07.490021Z",
+     "start_time": "2019-08-15T20:24:44.536Z"
     }
    },
    "outputs": [],
    "source": [
     "if SEARCH_PARAMS:\n",
-    "    study = optuna.create_study(pruner=optuna.pruners.MedianPruner(n_warmup_steps=10))\n",
+    "    study = optuna.create_study(pruner=optuna.pruners.MedianPruner(n_warmup_steps=1))\n",
     "    study.optimize(objective, timeout=60*60*6)\n",
     "\n",
     "    joblib.dump(study, 'study.pkl')\n",
@@ -374,13 +368,14 @@
     "    trials_df = trials_df.iloc[:params_for_cv,:]\n",
     "\n",
     "    model = lgb.LGBMClassifier(metric='auc')\n",
+    "    n_folds = 8\n",
     "\n",
     "    best_params = None\n",
     "    best_value = 0\n",
     "\n",
     "    for params in trials_df.params:\n",
     "        model.set_params(**params)\n",
-    "        score = cross_val_score2(model, X_train, y_train, n_fold)\n",
+    "        score = cross_val_score2(model, X_train, y_train, n_folds)\n",
     "\n",
     "        if score > best_value:\n",
     "            best_value = score\n",
@@ -394,35 +389,9 @@
     "                   'n_estimators': 1200,\n",
     "                   'subsample_for_bin': 290858,\n",
     "                   'min_child_samples': 79,\n",
-    "                   'reg_alpha': 1.2,\n",
+    "                   'reg_alpha': 1.0919573524807885,\n",
     "                   'colsample_bytree': 0.5653288564015742,\n",
     "                   'learning_rate': 0.028565794309535042}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-16T13:56:00.595876Z",
-     "start_time": "2019-08-16T13:56:00.593309Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#benchmark: 0.93493\n",
-    "#current:   0.93580\n",
-    "\n",
-    "# ROC accuracy: 0.9764910549866562, ROC train: 0.9999997134917551\n",
-    "# ROC accuracy: 0.9798173483745285, ROC train: 0.9999993176156706\n",
-    "# ROC accuracy: 0.9796044896846606, ROC train: 0.999999333921018\n",
-    "# ROC accuracy: 0.9799376146756081, ROC train: 0.9999992214473981\n",
-    "# ROC accuracy: 0.9779143538610231, ROC train: 0.9999995176057465\n",
-    "# ROC accuracy: 0.97729511666745, ROC train: 0.9999993471218942\n",
-    "# ROC accuracy: 0.9787953822526927, ROC train: 0.9999992397508431\n",
-    "# ROC accuracy: 0.9787187238393698, ROC train: 0.9999991877740493\n",
-    "\n",
-    "# 0.97857"
    ]
   },
   {
@@ -430,46 +399,21 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-08-16T13:56:03.328Z"
+     "end_time": "2019-08-15T20:27:07.491338Z",
+     "start_time": "2019-08-15T20:24:44.539Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14d6a5a9339a4668b9e0acbbc15f98da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=8), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ROC accuracy: 0.9756747397914473, ROC train: 0.9999990467472487\n",
-      "ROC accuracy: 0.9798611364168169, ROC train: 0.9999993158409389\n",
-      "ROC accuracy: 0.9785223103662416, ROC train: 0.9999988926783552\n",
-      "ROC accuracy: 0.9794739842534244, ROC train: 0.9999987835323569\n",
-      "ROC accuracy: 0.9777603266912955, ROC train: 0.9999994711299607\n",
-      "ROC accuracy: 0.977501842389944, ROC train: 0.9999986431094343\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True, random_state=42)\n",
+    "n_fold = 8\n",
+    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
     "\n",
     "model = lgb.LGBMClassifier(metric='auc')\n",
     "model.set_params(**best_params)\n",
     "\n",
     "model_scores = []\n",
     "model_scores_tr = []\n",
-    "for train_index, valid_index in tqdm_notebook(folds.split(X_train, y_train), total=n_fold):\n",
+    "for train_index, valid_index in folds.split(X_train, y_train):\n",
     "    \n",
     "    X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
     "    y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
@@ -488,9 +432,9 @@
     "    del pred\n",
     "    gc.collect()\n",
     "    \n",
-    "model_score = np.round(np.mean(model_scores),5)\n",
+    "model_score = np.round(np.mean(model_scores),4)\n",
     "print(model_score)\n",
-    "print(best_params)"
+    "print(params)"
    ]
   },
   {
@@ -498,7 +442,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-08-16T13:56:05.349Z"
+     "end_time": "2019-08-15T20:27:07.492850Z",
+     "start_time": "2019-08-15T20:24:44.541Z"
     }
    },
    "outputs": [],
@@ -506,13 +451,6 @@
     "timestamp = str(int(datetime.timestamp(datetime.now())))\n",
     "submission.to_csv('{}_submission_{}.csv'.format(timestamp, str(model_score)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
